--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: My Blog
+title: Anthony Lannutti's Blog
 email: lannuttia@gmail.com
 author: Anthony T. Lannutti
 description: >- # this means to ignore newlines until "baseurl:"
